Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Freelance Site</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+  <link rel="stylesheet" href="/style.css">
+</head>
+<body>
 <main>
       <ul>
         <a class="join-now" href="#">bp consulting</a>
